@@ -1,5 +1,6 @@
 3.2.2:
  * Fixed partial alpha in ICO and CUR images
+ * Set the cursor hotspot properties when loading CUR images
 
 3.0.0:
  * Added support for loading HDR AVIF images
